apps/home/expenseowl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: expenseowl
spec: {}
status: {}
