apps/home/expenseowl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expenseowl
  namespace: expenseowl
spec:
  type: ClusterIP
  selector:
    app: expenseowl
  ports:
    - name: http
      port: 8080
