apps/home/expenseowl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenseowl-traefik
  namespace: expenseowl
  annotations:
    spec.ingressClassName: expenseowl
spec:
  rules:
    - host: expense.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expenseowl
                port:
                  name: http
